# mp2-lab5-polynomial

./: CMakeLists.txt  README.md  Список.docx
include/: list.h  monom.h  polynomial-all.h  polynomial.h
sample/: CMakeLists.txt  sample.cpp
src/: monom.cpp  polynomial.cpp
tests/: CMakeLists.txt  test_list.cpp  test_monom.cpp  test_polynomial.cpp
